# FortressCraftMap

./: .gitignore  .gitmodules  FCPrototypeMap.sln  README.md
FCPrototypeMap/: FCPrototypeMap.njsproj  README.md  package.json  server.js
FCPrototypeMap/root/: constants.js  helper.js  index.html  input.js  main.js  worker.js
Source/: FCPrototypeMap.sln  FortressCraftMap.sln  README.md
Source/TexturePipeline/: Program.cs  TexturePipeline.csproj
Source/WebClient/: ChannelSocket.js  ChannelSocket.ts  Constants.ts  EventEmitter.ts  GLHelper.ts  Helper.ts  HttpHelper.ts  InputManager.js  Main.js  Main.ts  MainFrame.ts  MapRendererWorker.js  Mathx.ts  Segment.ts  SegmentManagerWorker.js  SegmentRenderData.js  SegmentRendererSlaveWorker.js  SegmentRendererWorker.js  SegmentShaders.js  Texture2D.ts  VertexDataGen.js  constants.js  glHelper.js  grid.js  helper.js  index.html  input.js  main.js  mainShader.js  package-lock.json  package.json  segmentManager.js  segmentRenderer.js  tsconfig.json  vertexDataGen.js  webpack.config.js
Source/WebClient x/: ChannelSocket.js  Constants.js  InputManager.js  MapRendererWorker.js  SegmentShaders.js  Settings.js  VertexDataGen.js
Source/fcmap-speedy/: Cargo.toml
Source/fcmap-speedy/src/: lib.rs  utils.rs
WebClient/: EventEmitter.js  constants.js  helper.js  index.html  input.js  main.js  mainRenderer.js  mainShader.js  segmentWorker.js  shaderHelper.js
WebRoot/: Index.html
WebSocketServer/: BufferPool.cs  JsonExtensions.cs  Point.cs  Program.cs  SegmentBehavior.cs  StreamExtensions.cs  WebSocketServer.csproj
(+190 files in other folders)
