[package]
name = "fcmap-speedy"
version = "0.1.0"
authors = ["TechnologicalPizza <piatkowski2002@gmail.com>"]
edition = "2018"
description = "Crate used to accelerate the FortressCraftMap web client through WebAssembly."
license = "MIT"
repository = "https://github.com/TechnologicalPizza/FortressCraftMap"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"

# The `console_error_panic_hook` crate provides better debugging of panics by logging
# them with `console.error`. This is great for development, but requires all the `std::fmt` 
# and `std::panicking` infrastructure, so isn't great for code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
opt-level = 3 # Tell `rustc` to optimize for small code size.
debug = true # symbols are nice and they don't increase the size on Flash

[profile.dev]
opt-level = 0

# optimize all dependencies
#[profile.dev.overrides."*"]
#codegen-units = 1 # better optimizations
#opt-level = 3

